--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -203,7 +203,7 @@
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">YOUR REWARD UPLOAD WAS SUCCESSFUL</h4>
 
         <div class="sb-verificationCheck mt-4 mb-4">
-            <i class="fa fa-check"></i>
+            <i class="fa fa-check sb-text-light-green-gradient"></i>
         </div>
 
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">YOU ARE READY TO START</h4>
@@ -219,7 +219,7 @@
         <h4 class="spotbie-text-gradient text-uppercase">YOUR REWARD WAS DELETED</h4>
 
         <div class="sb-verificationCheck mt-4 mb-4">
-            <i class="fa fa-check"></i>
+            <i class="fa fa-check sb-text-light-green-gradient"></i>
         </div>
 
         <h4 class="spotbie-text-gradient text-uppercase">CLICK TO CONTINUE</h4>
