--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -283,17 +283,14 @@ img.sb-qr:hover{
     color: white;
     text-align: left;
 }
-
 .sb-fb-logIn-btn{
     background: #4385f5;
     border: 1px solid #4385f5
 }
-
 .sb-fb-logIn-btn:hover {
     background-color: #2c6ad4;
     border-color: #2c6ad4
 }
-
 .sb-google-logIn-btn{
     background: #db4c3e;
     border: 1px solid #db4c3e
@@ -302,15 +299,12 @@ img.sb-qr:hover{
     background: #bd4033;
     border-color: #bd4033
 }
-
 .sb-google-logIn-btn i{
     margin-left: 10px;
 }
-
 .spotbie-text-link{
     font-size: 15px;
 }
-
 .sb-inputWithIconWrapper{
     position: relative;
     margin: 0 auto;
@@ -346,7 +340,6 @@ img.sb-qr:hover{
     margin-bottom: 0px;
     max-width: 90%;
 }
-
 .spotbie-button{
     margin-bottom: unset !important;
     margin-top: 10px;
@@ -365,8 +358,6 @@ img.sb-qr:hover{
     align-items: center; 
     padding-bottom: unset !important;         
 }
-
-
 .sb-login-top-padding{
     padding-top: 120px;
 }
@@ -397,6 +388,9 @@ img.sb-qr:hover{
     top: 2%;
     right: 3%;    
 }
+.sb-scroll{
+    overflow-y: hidden;
+}
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1600px) { 
     .sb-userName,
@@ -424,7 +418,10 @@ img.sb-qr:hover{
     }
     .spotbie-menu-fixed{
         padding-top: env(safe-area-inset-top, 20px);   
-    }      
+    }    
+    .sb-scroll{
+        overflow-y: scroll;
+    }  
 }
 @media (max-width: 650px) { 
     .spotbie-header-mini-logo{
@@ -448,7 +445,7 @@ img.sb-qr:hover{
         min-width: 100%;
     } 
     span.sb-loyalty-points{
-        padding-right: 5px;
+        padding-right: 5px !important;
         margin-left: 10px;
         border-left: unset;
     }
