--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -44,113 +44,109 @@
         </div>
 
     </div>
-
+    
 </div>
 
 <div class="spotbie-overlay-window pt-5 d-flex align-items-center justify-content-center" *ngIf="businessLoyaltyPointsOpen">
 
-    <div class="sb-budget-wrapper">        
+    <div style="overflow-y: scroll; min-width: 100%;">
 
-        <div>
+        <div #businessLoyaltyPointsInfo class="spotbie-loyaltyPointsInfo spotbie-text-gradient text-center text-uppercase">
+            <h4 class="spotbie-text-gradient text-center text-uppercase">MONTHLY BUDGET</h4>
+        </div>
 
-            <div #businessLoyaltyPointsInfo class="spotbie-loyaltyPointsInfo spotbie-text-gradient text-center text-uppercase">
-                <h4 class="spotbie-text-gradient text-center text-uppercase">MONTHLY BUDGET</h4>
-            </div>
+        <form [formGroup]="businessLoyaltyPointsForm" *ngIf="businessLoyaltyPointsFormUp">
 
-            <form [formGroup]="businessLoyaltyPointsForm" *ngIf="businessLoyaltyPointsFormUp">
-
-                <div *ngIf="businessLoyaltyPointsSubmitted && f.businessCoinPercentage.errors else percentage_normal" 
-                      class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
-            
-                    <div *ngIf="f.businessCoinPercentage.errors.required">
-                        Point-to-Dollar Ratio %
-                    </div>
-                    
-                </div> 
+            <div *ngIf="businessLoyaltyPointsSubmitted && f.businessCoinPercentage.errors else percentage_normal" 
+                    class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
+        
+                <div *ngIf="f.businessCoinPercentage.errors.required">
+                    Point-to-Dollar Ratio %
+                </div>
                 
-                <ng-template #percentage_normal>
-                    <label class="spotbie-input-info spotbie-text-gradient mb-2">
-                        Point-to-Dollar Ratio %
-                    </label>          
-                </ng-template>
-
-                <input class="sb-input" 
-                        (click)="$event.target.select()" 
-                        (keyup)="calculateDollarValue()"
-                        [dropSpecialCharacters]="false"
-                        formControlName="businessCoinPercentage" 
-                        type="text" 
-                        placeholder="1.5%"
-                        separatorLimit="1000"
-                        suffix="%"
-                        maxlength="6"
-                        mask="percent" />     
-
-                <div *ngIf="businessLoyaltyPointsSubmitted && f.businessLoyaltyPoints.errors else loyalty_points_normal" 
-                        class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
+            </div> 
             
-                    <div *ngIf="f.businessLoyaltyPoints.errors.required">
-                        Loyalty Points per Month
-                    </div>
-                    
-                </div> 
+            <ng-template #percentage_normal>
+                <label class="spotbie-input-info spotbie-text-gradient mb-2">
+                    Point-to-Dollar Ratio %
+                </label>          
+            </ng-template>
+
+            <input class="sb-input" 
+                    (click)="$event.target.select()" 
+                    (keyup)="calculateDollarValue()"
+                    [dropSpecialCharacters]="false"
+                    formControlName="businessCoinPercentage" 
+                    type="text" 
+                    placeholder="1.5%"
+                    separatorLimit="1000"
+                    suffix="%"
+                    maxlength="6"
+                    mask="percent" />     
+
+            <div *ngIf="businessLoyaltyPointsSubmitted && f.businessLoyaltyPoints.errors else loyalty_points_normal" 
+                    class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
+        
+                <div *ngIf="f.businessLoyaltyPoints.errors.required">
+                    Loyalty Points per Month
+                </div>
                 
-                <ng-template #loyalty_points_normal>
-                    <label class="spotbie-input-info spotbie-text-gradient mt-4 mb-2">
-                        Loyalty Points per Month
-                    </label>          
-                </ng-template>
+            </div> 
+            
+            <ng-template #loyalty_points_normal>
+                <label class="spotbie-input-info spotbie-text-gradient mt-4 mb-2">
+                    Loyalty Points per Month
+                </label>          
+            </ng-template>
 
-                <input class="sb-input" 
-                        (click)="$event.target.select()" 
-                        (keyup)="calculateDollarValue()"
-                        formControlName="businessLoyaltyPoints" 
-                        type="text" 
-                        placeholder="0" 
-                        maxlength="7"
-                        thousandSeparator="," 
-                        mask="separator.0" />            
-            
-            </form>               
-            
-            <p class="spotbie-text-gradient text-uppercase mt-4" style="font-size: .8rem !important;" *ngIf="monthlyDollarValueCalculated">
-                monthly dollar value ${{ userPointToDollarRatio | number:'1.0':'en-US' }}
+            <input class="sb-input" 
+                    (click)="$event.target.select()" 
+                    (keyup)="calculateDollarValue()"
+                    formControlName="businessLoyaltyPoints" 
+                    type="text" 
+                    placeholder="0" 
+                    maxlength="7"
+                    thousandSeparator="," 
+                    mask="separator.0" />            
+        
+        </form>               
+        
+        <p class="spotbie-text-gradient text-uppercase mt-4" style="font-size: .8rem !important;" *ngIf="monthlyDollarValueCalculated">
+            monthly dollar value ${{ userPointToDollarRatio | number:'1.0':'en-US' }}
+        </p>
+
+        <div class='spotbie-howDoesItWork spotbie-text-gradient text-center text-uppercase mt-4' (click)="toggleHelp()" style="cursor: pointer;">
+            <i class='fa fa-question-circle'></i>how does it work?
+        </div>
+
+        <div class='sb-helpBlock mt-4' *ngIf="helpEnabled" style="text-align: center;">
+
+            <p class='spotbie-text-gradient mb-3'>
+                Input the dollar value of each of your loyalty points.
             </p>
 
-            <div class='spotbie-howDoesItWork spotbie-text-gradient text-center text-uppercase mt-4' (click)="toggleHelp()" style="cursor: pointer;">
-                <i class='fa fa-question-circle'></i>how does it work?
-            </div>
+            <p class='spotbie-text-gradient mb-3'>
+                Input the amount of loyalty points you want to give away each month.
+            </p>
 
-            <div class='sb-helpBlock mt-4' *ngIf="helpEnabled" style="text-align: center;">
+            <p class='spotbie-text-gradient mb-3'>
+                When your customers <b>scan your QR code</b>, they will get an amount of loyalty points directly proportional to their bill.
+            </p>     
 
-                <p class='spotbie-text-gradient mb-3'>
-                    Input the dollar value of each of your loyalty points.
-                </p>
+            <p class='spotbie-text-gradient mb-3'>
+                Let's say your customer spent <b>$200</b> on their bill. If your <b>loyalty points are worth 2.5% of a dollar</b>, then your customer will gain
+                <br/><b>$200.00 * (2.5%/100) = 5 Loyalty Points</b>!
+            </p> 
 
-                <p class='spotbie-text-gradient mb-3'>
-                    Input the amount of loyalty points you want to give away each month.
-                </p>
+        </div>
 
-                <p class='spotbie-text-gradient mb-3'>
-                    When your customers <b>scan your QR code</b>, they will get an amount of loyalty points directly proportional to their bill.
-                </p>     
+        <div class='spotbie-button text-uppercase mt-3' (click)="submitBusinessLoyaltyPoints()">
+            SAVE
+        </div>    
 
-                <p class='spotbie-text-gradient mb-3'>
-                    Let's say your customer spent <b>$200</b> on their bill. If your <b>loyalty points are worth 2.5% of a dollar</b>, then your customer will gain
-                    <br/><b>$200.00 * (2.5%/100) = 5 Loyalty Points</b>!
-                </p> 
-
-            </div>
-
-            <div class='spotbie-button text-uppercase mt-3' (click)="submitBusinessLoyaltyPoints()">
-                SAVE
-            </div>    
-
-            <div class='spotbie-text-gradient text-center text-uppercase mt-4' 
-                    style="cursor: pointer;" (click)="closeBusinessLoyaltyPoints()">
-                <span class='spotbie-text-gradient text-center text-uppercase'>CLOSE</span>
-            </div>
-
+        <div class='spotbie-text-gradient text-center text-uppercase mt-4' 
+                style="cursor: pointer;" (click)="closeBusinessLoyaltyPoints()">
+            <span class='spotbie-text-gradient text-center text-uppercase'>CLOSE</span>
         </div>
 
     </div>
