--- a/src/styles.css
+++ b/src/styles.css
@@ -293,6 +293,11 @@ a, a:hover, a:active, a:after{
     -webkit-text-fill-color: transparent;
     letter-spacing: 2px;
 }
+.sb-text-red-gradient{    
+    background: -webkit-linear-gradient(45deg,#e61d1d,#f70505,#ff0000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .spotbie-error{    
     background: -webkit-linear-gradient(45deg,#e61d1d,#f70505,#ff0000);
     -webkit-background-clip: text;
